objects/amc__Role__c.object
<CustomObject>
    <fields>
        <fullName>amc__Action_Notification_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Action Trigger to send Action Notification emails</description>
        <label>Action Notification Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When unchecked, Roles aren&apos;t visible in the Scheduler, Create Action or Log Time forms</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Billable_Target__c</fullName>
        <inlineHelpText>Identifies the percentage of billable work per week this Role should achieve</inlineHelpText>
        <label>Billable Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Console_Default_Tab__c</fullName>
        <inlineHelpText>Identifies which &apos;Pad&apos; is loaded by default when the Role visits the Mission Control Console</inlineHelpText>
        <label>Console Default Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Launch Pad</fullName>
                    <default>true</default>
                    <label>Launch Pad</label>
                </value>
                <value>
                    <fullName>Progress Pad</fullName>
                </value>
                <value>
                    <fullName>Management Pad</fullName>
                </value>
                <value>
                    <fullName>Control Pad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Hourly_Rate__c</fullName>
        <inlineHelpText>Identifies the costs incurred by utilising this Role for 1 hour</inlineHelpText>
        <label>Cost Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Daily_Digest_Friday__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Friday</inlineHelpText>
        <label>Daily Digest - Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Daily_Digest_Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Monday</inlineHelpText>
        <label>Daily Digest - Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Daily_Digest_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Saturday</inlineHelpText>
        <label>Daily Digest - Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Daily_Digest_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Sunday</inlineHelpText>
        <label>Daily Digest - Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Daily_Digest_Thursday__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Thursday</inlineHelpText>
        <label>Daily Digest - Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Daily_Digest_Tuesday__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Tuesday</inlineHelpText>
        <label>Daily Digest - Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Daily_Digest_Wednesday__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Wednesday</inlineHelpText>
        <label>Daily Digest - Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Email_Lookup__c</fullName>
        <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.Email ,  amc__Contact__r.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Scheduler__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies whether this Role should be excluded from the Scheduler.</inlineHelpText>
        <label>Exclude from Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Expense_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role responsible for approving Expenses incurred by this Role</inlineHelpText>
        <label>Expense Approver</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Roles (Expense Approver)</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__First_Name__c</fullName>
        <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.FirstName ,  amc__Contact__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Gantt_Action_Default_Tab__c</fullName>
        <inlineHelpText>Identifies which Tab on the Gantt Action Modal is displayed by default</inlineHelpText>
        <label>Gantt Action Default Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                    <default>true</default>
                    <label>Action</label>
                </value>
                <value>
                    <fullName>Record Detail</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Log Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Gantt_Checklist_Default_Tab__c</fullName>
        <inlineHelpText>Identifies which Tab on the Gantt Checklist Modal is displayed by default</inlineHelpText>
        <label>Gantt Checklist Default Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checklist</fullName>
                    <default>true</default>
                    <label>Checklist</label>
                </value>
                <value>
                    <fullName>Record Detail</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Gantt_Milestone_Default_Tab__c</fullName>
        <inlineHelpText>Identifies which Tab on the Gantt Milestone Modal is displayed by default</inlineHelpText>
        <label>Gantt Milestone Default Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Milestone</fullName>
                    <default>true</default>
                    <label>Milestone</label>
                </value>
                <value>
                    <fullName>Record Detail</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Gantt_Project_Default_Tab__c</fullName>
        <inlineHelpText>Identifies which Tab on the Gantt Project Modal is displayed by default</inlineHelpText>
        <label>Gantt Project Default Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                    <default>true</default>
                    <label>Project</label>
                </value>
                <value>
                    <fullName>Record Detail</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Hourly_Rate__c</fullName>
        <inlineHelpText>Set the billable hourly rate for this project role (Previously labelled Hourly Rate)</inlineHelpText>
        <label>Billable Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Per_Week__c</fullName>
        <description>How many hours a week this Role is available.</description>
        <label>Hours Per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Last_Name__c</fullName>
        <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.LastName ,  amc__Contact__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Manage_Subordinate_Timesheets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if this Role has the permission to view the Timesheets of those Roles that he/she is set as the Timesheet Approver for</description>
        <label>Manage Subordinate Timesheets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Manage_Timesheets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the associated user is able to view other Roles&apos; timesheets.</description>
        <label>Manage Timesheets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Master_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies which Team Assignment is flagged as this Role&apos;s Master Team</inlineHelpText>
        <label>Master Team</label>
        <referenceTo>amc__Team__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Mileage_Rate__c</fullName>
        <inlineHelpText>Identifies the amount paid per Kilometre / Mile</inlineHelpText>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Notification_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Milestone Trigger to send Milestone Notification emails</description>
        <label>Milestone Notification Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Mobile__c</fullName>
        <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.MobilePhone ,  amc__Contact__r.MobilePhone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Phone__c</fullName>
        <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.Phone ,  amc__Contact__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Project_Overview_Default_Tab__c</fullName>
        <inlineHelpText>Identifies which Tab on the Project Overview is displayed by default</inlineHelpText>
        <label>Project Overview Default Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insights</fullName>
                    <default>true</default>
                    <label>Insights</label>
                </value>
                <value>
                    <fullName>Overview</fullName>
                </value>
                <value>
                    <fullName>Action Pad</fullName>
                </value>
                <value>
                    <fullName>Time Logs</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Risks</fullName>
                </value>
                <value>
                    <fullName>Issue Log</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Whiteboard</fullName>
                </value>
                <value>
                    <fullName>Gantt Chart</fullName>
                </value>
                <value>
                    <fullName>Rev Rec</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Retro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Receive_Action_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables Action Owners to receive an Automatic Notification email when the Status of a parent Action is set to Complete.</inlineHelpText>
        <label>Receive Action Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Receive_Digest__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this to ensure this person receives the Mission Control Daily Digest</inlineHelpText>
        <label>Receive Digest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Receive_Exception_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to ensure this person receives the Mission Control Timesheet Exception Notification Email</inlineHelpText>
        <label>Receive Exception Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Receive_New_Action_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Mission Control - System Level Only</description>
        <label>Receive New Action Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Receive_Timesheet_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to ensure this person receives the Mission Control Timesheet Submission Reminder</inlineHelpText>
        <label>Receive Timesheet Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Role_Notes_RT__c</fullName>
        <inlineHelpText>Details Notes relating to the Role</inlineHelpText>
        <label>Role Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Timesheet_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role record of the person responsible for approving Time Logs for this person</inlineHelpText>
        <label>Timesheet Approver</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Roles (Timesheet Approver)</relationshipLabel>
        <relationshipName>Roles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Track_Pad_Default_Tab__c</fullName>
        <inlineHelpText>Identifies which Tab will be displayed by default when viewing the Track Pad</inlineHelpText>
        <label>Track Pad Default Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Timeline</fullName>
                    <default>true</default>
                    <label>Timeline</label>
                </value>
                <value>
                    <fullName>Time Logger</fullName>
                </value>
                <value>
                    <fullName>Expense Logger</fullName>
                </value>
                <value>
                    <fullName>Add Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__View_Action_Pad_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies if the Role has the permission to view the Action Pad on the Project Overview Page</description>
        <label>View Action Pad Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Billing_Tab_Charts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Charts on the Project Overview Billing Tab</inlineHelpText>
        <label>View Billing Tab Charts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Billing_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Billing Tab</inlineHelpText>
        <label>View Billing Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Budget_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Budget Tab</inlineHelpText>
        <label>View Budget Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Control_Pad__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role can view the Control Pad on the Mission Control Console</inlineHelpText>
        <label>View Control Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Detail_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role can view the Detail Tab on the Project Overview</inlineHelpText>
        <label>View Detail Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Expenses_Tab_Charts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Charts on the Project Overview Expenses Tab</inlineHelpText>
        <label>View Expenses Tab Charts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Expenses_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Expenses Tab</inlineHelpText>
        <label>View Expenses Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Action_Chatter_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Action Chatter Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Action_Log_Time_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Action Log Time Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Action_Record_Detail_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Action Record Detail Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Action_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Action Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Chart_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Gantt Chart Tab</inlineHelpText>
        <label>View Gantt Chart Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Checklist_Chatter_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Checklist Chatter Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Checklist_Record_Detail_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Checklist Record Detail Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Checklist_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Checklist Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Milestone_Chatter_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Milestone Chatter Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Milestone_Record_Detail_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Milestone Record Detail Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Milestone_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Milestone Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Project_Chatter_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Project Chatter Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Project_Record_Detail_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Project Record Detail Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Gantt_Project_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
        <label>View Gantt Project Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Insights_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Insights Tab</inlineHelpText>
        <label>View Insights Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Issue_Log_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies if the Role has the permission to view the Issue Log on the Project Overview Page</description>
        <label>View Issue Log Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Launch_Pad__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role can view the Launch Pad on the Mission Control Console</inlineHelpText>
        <label>View Launch Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Management_Pad__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role can view the Management Pad on the Mission Control Console</inlineHelpText>
        <label>View Management Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Overview_Tab_Charts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Charts on the Project Overview Overview Tab</inlineHelpText>
        <label>View Overview Tab Charts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Overview_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Overview Tab</inlineHelpText>
        <label>View Overview Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Progress_Pad__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role can view the Progress Pad on the Mission Control Console</inlineHelpText>
        <label>View Progress Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Retro_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Retrospective Tab</inlineHelpText>
        <label>View Retro Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Rev_Rec_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies whether the User linked to this Role has the ability to view the Revenue Recognition Tab</description>
        <label>View Rev Rec Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Risks_Tab_Charts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Charts on the Project Overview Risks Tab</inlineHelpText>
        <label>View Risks Tab Charts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Risks_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Risks Tab</inlineHelpText>
        <label>View Risks Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Scheduler_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if this Role can view the Scheduler Tab on the Project Overview</inlineHelpText>
        <label>View Scheduler Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Time_Logs_Tab_Charts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Charts on the Project Overview Time Logs Tab</inlineHelpText>
        <label>View Time Logs Tab Charts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Time_Logs_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Time Logs Tab</inlineHelpText>
        <label>View Time Logs Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Add_Action__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Add Action Tab</inlineHelpText>
        <label>View Track Pad Add Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Add_Issue__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role has the permission to view the Add Issue Tab on the Track Pad</inlineHelpText>
        <label>View Track Pad Add Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Add_Risk__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role has the permission to view the Add Risk Tab on the Track Pad</inlineHelpText>
        <label>View Track Pad Add Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Expense_Logger__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Expense Logger Tab</inlineHelpText>
        <label>View Track Pad Expense Logger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Feed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Feed Tab</inlineHelpText>
        <label>View Track Pad Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Time_Logger__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Time Logger Tab</inlineHelpText>
        <label>View Track Pad Time Logger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Timeline__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Timeline Tab</inlineHelpText>
        <label>View Track Pad Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad</inlineHelpText>
        <label>View Track Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Whiteboard_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Whiteboard Tab</inlineHelpText>
        <label>View Whiteboard Tab</label>
        <type>Checkbox</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>Implementation_Managers</fullName>
        <columns>NAME</columns>
        <columns>amc__Job_Title__c</columns>
        <columns>amc__Manage_Timesheets__c</columns>
        <columns>amc__Timesheet_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Job_Title__c</field>
            <operation>contains</operation>
            <value>Implementation</value>
        </filters>
        <filters>
            <field>amc__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Implementation Managers</label>
    </listViews>
    <listViews>
        <fullName>Program_Architects</fullName>
        <columns>NAME</columns>
        <columns>amc__Job_Title__c</columns>
        <columns>amc__Manage_Timesheets__c</columns>
        <columns>amc__Timesheet_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Job_Title__c</field>
            <operation>contains</operation>
            <value>Architect</value>
        </filters>
        <filters>
            <field>amc__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Program Architects</label>
    </listViews>
</CustomObject>